# clippr

./: Cargo.toml  README.md  justfile
clippr/: Cargo.toml
clippr-ui/: Cargo.toml  README.md  justfile
clippr-ui/src/: main.rs
clippr/src/: cli.rs  encode.rs  error.rs  gui.rs  lib.rs  main.rs  probe.rs  strategy.rs
src/: cli.rs  main.rs  strategy.rs
